--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -12,13 +12,29 @@ jobs:
     strategy:
       matrix:
         browser: [chrome, firefox]
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Temurin JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
+
+      - name: Install Chrome
+        if: matrix.browser == 'chrome'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable chromium-chromedriver
+          export PATH=$PATH:/usr/lib/chromium-browser/
+
+      - name: Install Firefox
+        if: matrix.browser == 'firefox'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y firefox firefox-geckodriver
+
       - name: Cache Maven repository
         uses: actions/cache@v4
         with:
@@ -26,7 +42,8 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-m2-
+
       - name: Run tests
-        run: mvn -B -e test -Dbrowser=${{ matrix.browser }}
+        run: mvn -B -e -X test -DsuiteXmlFile=testng.xml -Dbrowser=${{ matrix.browser }}
         env:
           CI: true
