--- a/.github/workflows/selenium-ci.yml
+++ b/.github/workflows/selenium-ci.yml
@@ -33,7 +33,8 @@ jobs:
         if: matrix.browser == 'firefox'
         run: |
           sudo apt-get update
-          sudo apt-get install -y firefox firefox-geckodriver
+          sudo apt-get install -y firefox
+          firefox --version
 
       - name: Cache Maven repository
         uses: actions/cache@v4
